color palette and banner image changed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     a
   </div>
   <header>
-    <img src="images/self.png" alt="headshot of Arianna Marin">
+    <img src="images/self1.jpg" alt="headshot of Arianna">
     <h1>Hello efelle, I'm Arianna: training web developer</h1>
     <h2>Objective:</h2>
       <p>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I already have a creative degree. I am currently studing web development and would like to apply my robust HTML/CSS skills towards real-world application. Seeking to utilize my evolving ablilites in a busy work environment while gaining experience in the web development industry.</p>
@@ -110,10 +110,10 @@
 
 
   <footer>
-    <h2>Thank you for taking the time to learn more about me. Thank you for considering me to be a part of the efelle family. I look forward to hearing from you.<h2>
-    <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email Me</a>
+    <h2>Thank you for taking the time to learn more about me. Thank you for considering me to be a part of the Efelle family. I look forward to hearing from you. Email address: marin.arianna@gmail.com<h2>
     <p>Arianna Marin 2016</p>
     <p>Font Credit:</p>
+    <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email Me</a>
   </footer>
 
 <body>
