typeface open sans added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/native.css">
   <link rel="stylesheet" href="css/reset.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
   </head>
 
 <body>
@@ -110,9 +111,10 @@
 
 
   <footer>
-    <h2>Thank you for taking the time to learn more about me. Thank you for considering me to be a part of the Efelle family. I look forward to hearing from you. Email address: marin.arianna@gmail.com<h2>
+    <p>Thank you for taking the time to learn more about me. Thank you for considering me to be a part of the Efelle family. I look forward to hearing from you. Email address: marin.arianna@gmail.com</p>
     <p>Arianna Marin 2016</p>
-    <p>Font Credit:</p>
+    <p>Font Credit:
+      Color Palette: <a href="http://ethanschoonover.com/solarized">Solarized</a></p>
     <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email Me</a>
   </footer>
 
