--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <section class="light">
         <h2>Education</h2>
         <ul>
-          <li>Currently: Seattle University <a href="http://webdev.seattleu.edu/">Web Development Certificate Program</a> <br>Anticipated Graduation: Fall 2016</li>
+          <li>Currently: Seattle University <a href="http://webdev.seattleu.edu/"> Web Development Certificate Program</a> <br>Anticipated Graduation: Fall 2016</li>
           <li>Savannah College of Art and Design: BFA in Photography/Graphic Design minor <br>Graduated: Nov 2013</li>
           <li>Study Abraod Hong Kong: Winter 2014</li>
         </ul>
@@ -82,7 +82,7 @@
           <li>Professional Practice</li>
           <li>Web Development Capstone Project</li>
         </ul>
-        <a href="http://webdev.seattleu.edu/courses.html">Full course descriptions</a>
+        <a href="http://webdev.seattleu.edu/courses.html"> Full course descriptions</a>
       </section>
   
       <section class="dark">
@@ -113,7 +113,7 @@
   <footer>
     <p>Thank you for taking the time to learn more about me. Thank you for considering me to be a part of the Efelle family. I look forward to hearing from you. Email address: marin.arianna@gmail.com</p>
     <p>Arianna Marin 2016</p>
-    <p>Font Credit:
+    <p>Typeface: "Open Sans" via Google Fonts
       Color Palette: <a href="http://ethanschoonover.com/solarized">Solarized</a></p>
     <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email Me</a>
   </footer>
