added content to avid listener skill

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li>Teamwork. I have experience working in small teams and coordinating with people in order to create an effiecient and transparent work environment.</li>
             <li>Organization. At my current job I have to manage various orders, filing, and tasks for a group of people. This forces me to be organized, things have to be ordered on time without gaps in supplies and my workspace has to be clear so other people can easily navigate it.</li>
             <li>Avid, Passionate learner. I love learning about web development. I am a patient student and I see obstacles as an opportunity to learn. Working on class projects and practicing programming on my own is exciting to me.</li>
-            <li>active listener-give examples</li>
+            <li>Good Communication Skills: Active Listener. I make a conscious effort to fulling listen to information before responding. This allows me to understand the complete message that is communicated. </li>
           </ul>
           <ul>Technical Skills
             <li>Adobe Photoshop, Illustrator, InDesign</li>
@@ -66,7 +66,7 @@
           <li>Savannah College of Art and Design: BFA in Photography/Graphic Design minor <br>Graduated: Nov 2013</li>
           <li>Study Abraod Hong Kong: Winter 2014</li>
         </ul>
-
+        <br>
         <h2>Relevant Coursework</h2>
         <ul>Current Classes:
           <li>Foundations of the Web-Intro to the Internet and the World Wide Web</li>
