--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     a
   </div>
   <header>
-    <h1>Hello efelle, I'm Arianna: training web developer</h1>
+    <h1>Hello Efelle, I'm Arianna</h1>
     <img src="images/self1.jpg" alt="headshot of Arianna">
     <h2>Objective</h2>
-      <p>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I already have a creative degree. I am currently studing web development and would like to apply my robust HTML/CSS skills towards real-world application. Seeking to utilize my evolving ablilites in a busy work environment while gaining experience in the web development industry.</p>
+      <p>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I would love to apply my robust HTML/CSS skills towards real-world application. At Efelle, I will utilize my evolving ablilites in a work environment while gaining experience in the web development industry.</p>
     <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email Arianna</a>
     <a href="https://github.com/marinari" class="btn">My Github</a>
   </header>
