typeface not working in safari

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>Arianna Marin- Web Dev Position</title>
   <meta name="description" content=" Arianna Marin's proposal for limbo position in between web developer intern and entry level front end web developer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/native.css">
   <link rel="stylesheet" href="css/reset.css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
   </head>
 
 <body>
@@ -17,8 +17,7 @@
   <header>
     <h1>Hello Efelle, I'm Arianna</h1>
     <img src="images/self1.jpg" alt="headshot of Arianna">
-    <h2>Objective</h2>
-      <p>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I would love to apply my robust HTML/CSS skills towards real-world application. At Efelle, I will utilize my evolving ablilites in a work environment while gaining experience in the web development industry.</p>
+      <p>Objective <br>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I would love to apply my robust HTML/CSS skills towards real-world application. At Efelle, I will utilize my evolving ablilites in a work environment while gaining experience in the web development industry.</p>
     <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email Arianna</a>
     <a href="https://github.com/marinari" class="btn">My Github</a>
   </header>
