maybe typeface bug solved

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Arianna Marin- Web Dev Position</title>
-  <meta name="description" content=" Arianna Marin's proposal for limbo position in between web developer intern and entry level front end web developer">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/native.css">
+    <meta charset="utf-8">
+    <title>Arianna Marin- Web Dev Position</title>
+    <meta name="description" content="Arianna Marin's proposal for limbo position in between web developer intern and entry level front end web developer.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/native.css">
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
   </head>
 <body>
 
   <div id="blur">
     a
   </div>
+
   <header>
     <h1>Hello Efelle, I'm Arianna</h1>
     <img src="images/self1.jpg" alt="headshot of Arianna">
@@ -33,7 +36,7 @@
             <li>Over 3+ years of customer service. I am comfortable talking to people in a pleasant, professional manner. I am comfortable resolving conflicts with customers.<li>
             <li>Teamwork. I have experience working in small teams and coordinating with people in order to create an effiecient and transparent work environment.</li>
             <li>Organization. At my current job I have to manage various orders, filing, and tasks for a group of people. This forces me to be organized, things have to be ordered on time without gaps in supplies and my workspace has to be clear so other people can easily navigate it.</li>
-            <li>Avid, Passionate learner. I love learning about web development. I am a patient student and I see obstacles as an opportunity to learn. Working on class projects and practicing programming on my own is exciting to me.</li>
+            <li>Avid, Passionate learner. I am a patient student and I see obstacles as an opportunity to learn. Working on class projects and practicing programming on my own is exciting to me.</li>
             <li>Good Communication Skills: Active Listener. I make a conscious effort to fulling listen to information before responding. This allows me to understand the complete message that is communicated. </li>
           </ul>
           <ul>Technical Skills
@@ -41,7 +44,7 @@
             <li>Photography</li>
             <li>HTML5, CSS3</li>
             <li>Version Control: Git, Github</li>
-            <li>Markdown</li>
+            <li>Social Media: Facebook, Twitter, Instagram, Tumblr</li>
           </ul>      
       </section>  
 
@@ -114,5 +117,5 @@
     <a href="mailto:marin.arianna@gmail.com" target="_top" class="btn">Email Me</a>
   </footer>
 
-<body>
+</body>
 </html>
