--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Arianna Marin's proposal for limbo position in between web developer intern and entry level front end web developer.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/native.css">
-    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa:700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
   </head>
 <body>
 
