padding fixed in cubes

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
       <section class="light">
           <h2>Skills</h2>
-          <p>The past jobs I've held have been primarily in adminstration and retail. Skills from these industries do not directly translate to the skills needed for a web developer. However, I still posess useful skills and experience because of this. See examples below:</p>
+          <p>The past jobs I've held have been primarily in adminstration and retail. Skills from these industries do not directly translate to the skills needed for a web developer. However, I still gained useful skills and experience from those jobs.</p>
           <ul>General Skills
-            <li>Over 3+ years of customer service. I am comfortable talking to people in a pleasant, professional manner. I am comfortable resolving conflicts with customers.<li>
+            <li>Over 3+ years of customer service. I am comfortable talking to people in a pleasant, professional manner. I am comfortable resolving conflicts with customers.</li>
             <li>Teamwork. I have experience working in small teams and coordinating with people in order to create an effiecient and transparent work environment.</li>
             <li>Organization. At my current job I have to manage various orders, filing, and tasks for a group of people. This forces me to be organized, things have to be ordered on time without gaps in supplies and my workspace has to be clear so other people can easily navigate it.</li>
             <li>Avid, Passionate learner. I am a patient student and I see obstacles as an opportunity to learn. Working on class projects and practicing programming on my own is exciting to me.</li>
@@ -88,16 +88,19 @@
       <section class="dark">
         <h2>Example Projects</h2>
           <ul>CSS Zen Garden
+            <li>Create a new design for the demo website, and in doing so you will practice an approach to graphic and interface design.</li>
             <li><a href="https://github.com/marinari/wats1010-css-zen-garden">Project Repository</a></li>
             <li><a href="http://marinari.github.io/wats1010-css-zen-garden/">Project Link</a></li>
           </ul>
 
           <ul>Embedded Media
+            <li>The goal of this assignment is to explore the features and capabilities available for embedding multimedia in HTML5 documents. We will experiment as we create a single, "long scrolling", page to promote the open source film, "Monkaa".</li> 
             <li><a href="https://github.com/marinari/wats1010-embedded-media">Project Repository</a></li>
             <li><a href="http://marinari.github.io/wats1010-css-zen-garden/">Project Link</a></li>
           </ul>
 
           <ul>Advanced Markup
+            <li>The purpose of this assignment is to practice additional markup techniques, including presentation of tabular data in an accessible format, and the HTML/CSS interaction required to make page layouts work to elegantly organize and contain information.</li>
             <li><a href="https://github.com/marinari/wats1010-adv-markup">Project Repository</a></li>
             <li><a href="http://marinari.github.io/wats1010-adv-markup/">Project Link</a></li>
           </ul>
