tentative final styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Arianna Marin- Web Dev Position</title>
+    <title>Arianna Marin- PT Web Dev Position</title>
     <meta name="description" content="Arianna Marin's proposal for limbo position in between web developer intern and entry level front end web developer.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/native.css">
@@ -18,7 +18,7 @@
   <header>
     <h1>Hello Efelle, I Have Something to Offer</h1>
     <img src="images/self1.jpg" alt="headshot of Arianna">
-      <p>Arianna Marin: Part Time Web Developer <br>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I would love to apply my robust HTML/CSS skills towards real-world application. At Efelle, I will utilize my evolving ablilites in a work environment while gaining experience in the web development industry.</p>
+      <p>Arianna Marin, Part Time Web Developer Objective <br>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I would love to apply my robust HTML/CSS skills towards real-world application. At Efelle, I will utilize my evolving ablilites in a work environment while gaining experience in the web development industry.</p>
     <a href="mailto:marin.arianna@gmail.com" class="btn">Email Arianna</a>
     <a href="https://github.com/marinari" class="btn">My Github</a>
   </header>
@@ -107,7 +107,7 @@
       
       <section class="light high">
         <h2>Social Impact</h2>
-        <p>I noticed immediately that your firm has a diverse work environment. I am passionate about programming and about breaking the mold of what a traditional developer is. The <a href="https://medium.com/the-coffeelicious/you-may-have-seen-my-face-on-bart-8b9561003e0f#.ldahherqm">#ILookLikeanEngineer</a> hashtag was launched to challenge common misconceptions about who engineers are.The hashtag grew in popularity as women and people of color used it to share their experiences in an industry that is traditonally run by mostly white and Asian men. These types of social movements personally resonate with me and I look forward to redefining the parameters of what a programmer/ web developer an look like. I believe this passion aligns with Efelle's progressive work culture values.</p>      
+        <p>I noticed immediately that your firm has a diverse work environment. I am passionate about programming and about breaking the mold of what a traditional developer is. The <a href="https://medium.com/the-coffeelicious/you-may-have-seen-my-face-on-bart-8b9561003e0f#.ldahherqm">#ILookLikeanEngineer</a> hashtag was launched to challenge common misconceptions about who engineers are. The hashtag grew in popularity as women and people of color used it to share their experiences in an industry that is traditonally run by mostly white and Asian men. These types of social movements personally resonate with me and I look forward to redefining the parameters of what a programmer/ web developer an look like. I believe this passion aligns with Efelle's progressive work culture values.</p>      
       </section>
 </div>
 
