tentative final copy changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <h1>Hello Efelle, I Have Something to Offer</h1>
     <img src="images/self1.jpg" alt="headshot of Arianna">
-      <p>Arianna Marin, Part Time Web Developer Objective <br>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I would love to apply my robust HTML/CSS skills towards real-world application. At Efelle, I will utilize my evolving ablilites in a work environment while gaining experience in the web development industry.</p>
+      <p>Arianna Marin| Part Time Web Developer| Objective <br>To gain personal satisfaction as web development trainee, a position in which I am constantly learning, adapting to change, and being challenged. I would love to apply my robust HTML/CSS skills towards real-world application. At Efelle, I will utilize my evolving ablilites in a work environment while gaining experience in the web development industry.</p>
     <a href="mailto:marin.arianna@gmail.com" class="btn">Email Arianna</a>
     <a href="https://github.com/marinari" class="btn">My Github</a>
   </header>
